--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "gray-matter": "^4.0.3",
+    "lodash-es": "^4.17.21",
     "next": "13.0.5",
     "next-intl": "^2.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
