--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "babel-plugin-styled-components": "^2.0.7",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
@@ -23,10 +24,13 @@
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "styled-components": "^5.3.6",
+    "styled-normalize": "^8.0.7",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
