--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/blog.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/lib/blog.js"],
   "exclude": ["node_modules"]
 }
